--- a/css/styles.css
+++ b/css/styles.css
@@ -810,6 +810,7 @@ body {
 
 
 
+
 .subscribe {
     margin-left: 80px;
 }
@@ -834,7 +835,7 @@ body {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     color: #FFFFFF;
     border-radius: 4px;
-    padding: 8px 16px 8px 38px;
+    padding: 8px 16px 8px;
 }
 
 .footer-input::placeholder {
@@ -964,6 +965,7 @@ body {
     color: #2E2F42;
     padding-left: 30px;
     margin-bottom: 10px;
+    padding: 8px 16px 8px 38px;
     outline: transparent;
     transition-property: border, fill;
     transition-duration: 250ms;
@@ -988,6 +990,7 @@ body {
     top: 18%;
 }
 
+
 .modal-name {
     font-family: 'Roboto';
     font-style: normal;
@@ -996,7 +999,6 @@ body {
     line-height: 1.16;
     letter-spacing: 0.04em;
     color: #8E8F99;
-    /*margin-top: 4px;*/
 }
 
 .modal-tel,
@@ -1008,7 +1010,6 @@ body {
     line-height: 1.16;
     letter-spacing: 0.01em;
     color: #8E8F99;
-   /* margin-top: 4px;*/
 }
 
 .modal-label {
